[FIX] align copyright message

--- a/dev/styles/main/footer/footer.less
+++ b/dev/styles/main/footer/footer.less
@@ -148,12 +148,16 @@
     .footer__bottom {
         text-align: left;
     }
+    .footer__bottom-copyright {
+        padding-left: 0;
+    }
     .footer__bottom-copyright > p{
         margin: 0;
     }
     .footer__bottom-nav{
         padding-top: 12px;
         border-top: 1px solid lighten(@footer-background, 20%);
+        padding-right: 0;
     }
     .footer__bottom-nav .ce-menu{
         text-align: right;
